<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.rpcosta.obligatorio1.VentanaRegistroNombre">

    <LinearLayout
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="260dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/Contraseña"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:text="@string/finalizar"
            android:textColor="@android:color/white"
            android:background="@drawable/button"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layuotText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_green_light"
            android:text="@string/Ingresocontraseña"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/contraseña1"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
