<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                tools:context="com.example.rpcosta.obligatorio1.VentanaRegistroNombre">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:id="@+id/linearLayout"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <EditText
                android:layout_width="260dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/white"
                android:hint="@string/mail"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="47dp">

        <Button
                android:layout_width="270dp"
                android:layout_height="35dp"
                android:textColor="@android:color/white"
                android:text="@string/continuar"
                android:background="@drawable/button"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout2">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/correo"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/correo1"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>